--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -26,6 +21,14 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.About {
+    margin: 5% 15% 5% 15%
+}
+
+p {
+    text-align: left;
 }
 
 @keyframes App-logo-spin {
