Fix bad css (missing semicolon)

--- a/src/App.css
+++ b/src/App.css
@@ -18,17 +18,8 @@
 }
 
 .About {
-    margin: 5% 15% 5% 15%
+    margin: 5% 15% 5% 15%;
     p {
         text-align: left;
     }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
