Fix safari format discrepancy in headings

--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,25 @@
 .App {
-  text-align: center;
-}
+    .App-header {
+      text-align: center;
+      background-color: #282c34;
+      color: white;
+      min-height: 20vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-size: calc(10px + 2vmin);
+    }
 
-.App-header {
-  background-color: #282c34;
-  color: white;
-  min-height: 20vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
+    .App-link {
+      color: #61dafb;
+    }
 
-.App-link {
-  color: #61dafb;
-}
+    .About {
+        margin: 5% 15% 5% 15%;
+    }
 
-.About {
-    margin: 5% 15% 5% 15%;
-    p {
-        text-align: left;
+    .About>h2 {
+        text-align: center;
     }
 }
