--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,4 +45,13 @@ body {
     @apply pb-2;
     @apply pl-4;
   }
+  
+  p {
+    @apply pb-2;
+  }
+  
+  a {
+    @apply text-primary_blue;
+    @apply hover:text-primary_blue-200;
+  }
 }
