Added formatting for H3 Headers

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,11 @@ body {
     @apply text-center;
     @apply font-bold;
   }
+
+  h3 {
+    @apply text-lg;
+  }
+
   ul {
     @apply list-disc;
     @apply list-inside;
