--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('./fullCalendar.css');
 
 :root {
   --background-start-rgb: 240, 240, 240;
